tests/testcase/errors/typecheck_if_condition_error.ob
fun main() do
  if 42 do
    return 1;
  end
end